--- a/main.css
+++ b/main.css
@@ -6,14 +6,29 @@
     font-family : "Poppins";
 }
 
+    /* Custom scrollbar: transparent */
+    ::-webkit-scrollbar {
+      width: 10px; /* width of the entire scrollbar */
+  }
+
+  ::-webkit-scrollbar-track {
+      background: transparent; /* color of the track */
+  }
+
+  ::-webkit-scrollbar-thumb {
+      background-color: transparent; /* color of the scroll thumb */
+      border-radius: 20px; /* roundness of the scroll thumb */
+      border: 3px solid transparent; /* creates padding around scroll thumb */
+  } 
+  
 html {
   scroll-behavior: smooth;
 }
 
 .maincon{
-  scroll-snap-type: y mandatory;
   overflow-y: scroll;
   height: 100vh;
+  width: auto;
   background-color: #F8F7F6;
 }
 
@@ -30,17 +45,18 @@ h1 {
   text-align: center;
 }
 
-/* The hero image */
+/* section one */
 .one {
     background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url("coverHero.jpg") ;
-    height: 100%;
+    height: 85%;
     /* Position and center the image to scale nicely on all screens */
     background-position: center;
     border-radius: 50px;
     background-repeat: no-repeat;
     background-size: 95%;
     position: relative;
-    border-radius: 30px;
+    border-radius: 70px;
+    margin-top: 15px;
   }
   /* Position the navbar container inside the image */
 .container {
@@ -52,13 +68,15 @@ h1 {
     }
     
     /* The navbar */
-.topnav {
+.topnav { 
       overflow: hidden;
       position: relative;
       width: 100%;
       margin-right: 0%;
-    
     }
+    .topnav .icon {
+  display: none;
+}
 
 
     /* Navbar links */
@@ -72,7 +90,8 @@ h1 {
     }
     
 .topnav a:hover {
-      color: black;
+      color: #CB516D;
+      font-weight: bold;
     }
 
   /* Place text in the middle of the image */
@@ -84,26 +103,64 @@ h1 {
     transform: translate(-50%, -50%);
     color: white;
   }
+/* manages section two*/
+.two{
+justify-content: center; 
+display: flex;
+flex-direction: column;
 
+}
+
+.two h1{
+  color: #a1607e; 
+  justify-items: center; 
+  height: auto;
+  margin-top:20px;  
+}
+.three{
+justify-content: center; display: flex; flex-direction: column; margin-top:50px;}
+
+.three h1{
+  justify-items: center; width: 100%; height: auto; color: #CB516D;
+}
+
+.three img{
+  height: 85%; width: 90%; border-radius: 30px; margin-top: 5px; margin-left: 80px;
+}
+
+.responsive {
+  padding: 10px 10px 10px 10px;
+  width: 80%;
+  padding-top: 30px;
+  display: flex;
+  flex-direction: row; 
+  flex-wrap: nowrap;
+  margin-left: 150px; 
+}
   
-
-div.gallery {
+/* manage fhrodes favorite/section two */
+.gallery {
   border-radius: 30px;
   padding: 0 20px 0 20px;
   margin: 0;
 }
 
-div.gallery:hover {
+.gallery:hover {
   border-radius: 30px;
+  transition-duration: 700ms;
+  border-radius: 30px;
+  box-shadow: 7px 7px gainsboro;
+  pointer-events: auto;
 }
 
-div.gallery img {
+
+.gallery img {
   width: 100%;
   height: 90%;
   border-radius: 30px;
 }
 
-div.desc {
+.desc {
   padding: 5px;
   margin-top: 0px;
   text-align: center;
@@ -112,37 +169,90 @@ div.desc {
   color: white;
 }
 
-
-.responsive {
-  padding: 10px 10px 10px 10px;
-  justify-content: center;
-  width: 80%;
-  padding-top: 80px;
-  display: flex;
-  flex-direction: row; 
-  flex-wrap: nowrap;
-  
+.four {
+  display:flex; 
+  flex-direction:column;
 }
 
+.four h1{
+  justify-items: center; 
+  width: 100%; 
+  height: auto; 
+  color: #A17D60; 
+  margin-top: 40px;
+}
 
-/* page keluaran makeup terbaru class three*/
+/* manage section five artikel*/
+.five{
+  height: 200vh; display: flex; flex-direction: column; margin-left: 20px;
+}
+.article{
+  background-color: #E0E0E0; 
+  margin-top: 20px; 
+  width: 90%; 
+  height: 45%; 
+  display: flex; 
+  flex-direction: row; 
+  border-radius: 30px; 
+  margin-left: 60px;
+}
+.outer{
+  align-content: flex-end; margin-bottom: 30px; width: 50%; margin-left: 20px;
+}
+.outer h1{
+  color: #545454; justify-content: left; text-align: left;
+}
 
+.outer p{
+  text-align: start; line-height: 1.4; color: #545454; margin: 20px 0; padding-right: 90px;
+}
 
+.outer a{
+  text-decoration: none; color: #757070; font-weight: bold;
+}
 
+.outer button{
+  width: 70px; height: 30px; border-radius: 20px; border: #757070;
+}
+.article img{
+  width:40%; height:90%; border-radius:30px; border-radius: 30px; margin-top: 20px; margin-left: 80px;
+}
 
+/*six, events */
+.six{
+  justify-content: center; display: flex; flex-direction: column;
+}
+.six h1{
+  justify-items: center; width: 100%; height: auto; color: #CB516D;
+}
+.six img{
+  height: 90%; width: 90%; border-radius: 30px; margin-top: 20px; margin-left: 80px;
+}
 
+/*seven FOOTER */
+.footer{
+  margin-top:25%; display: flex; width: 100%; height: 55%; flex-direction: column; background-color: #E0E0E0; border-radius: 10%;
+}
 
-
-
-
-
-
-
-
-
-
-
-
+.pg1{
+  color: #545454; margin-top:3%; display: flex; width: 100%; height: 50%; flex-direction: row; margin-left: 5%;
+}
+.satu{
+  color: #545454;float: left; display: flex; flex-direction: column; align-items: flex-start;
+}
+.satu h1{ font-size:80px;}
+.dua{
+  display: flex; flex-direction: column; margin-left: 15%; color: #545454;
+}
+.tiga{
+  display: flex; flex-direction: column;  align-items: flex-start; margin-left: 12%; color: #545454;
+}
+.empat{
+  display: flex; flex-direction: column; align-items: flex-start; margin-left: 10%; color: #545454;
+}
+.lima{
+  margin-top: 7%; text-align: center; color: #545454;
+}
 
 /*isi artikel isiart.html */
 .containerArt{
@@ -155,21 +265,34 @@ div.desc {
   color: #545454;
 }
 
+.containerArt img{
+  height: 50%; float: inline-end; border-radius: 30px;
+}
+
 /* isi kategori isikategori.html*/
+.ctg {
+  height: auto; 
+  display: flex; 
+  flex-direction: 
+  row; width: 80%; 
+  margin-left: 140px;
+}
 
 .list-produk
 {
     border: 1px solid gainsboro;
-    padding: 200px;
-    width: 100%;
-    margin: 0px;
+    padding: 0px;
+    margin: 15px;
+    border-radius: 30px;
+    width: 100%; height: auto;
 }
  
 .list-produk:hover
 {
     transition-duration: 700ms;
-    box-shadow: 5px 5px gainsboro;
-    pointer-events:auto;
+    border-radius: 30px;
+    box-shadow: 7px 7px gainsboro;
+    pointer-events: auto;
 }
  
 .list-produk img
@@ -177,18 +300,11 @@ div.desc {
     width: 100%;
     height: 100%;
     display: block;
-    margin-bottom: 5px;
+    border-radius: 30px;
 }
- 
-.list-produk h4, .list-produk h5
-{
-    color: crimson;
-    text-align: center;
-    margin-bottom: 5px;
-}
- 
 
 
+/* ARTIKEL */
 
 
 /* isi review produk review.html*/
@@ -199,47 +315,271 @@ div.desc {
 }
 
 
+/* responsive tablet */
+@media only screen and (max-width: 800px) {
+  .container {
+      position: absolute;
+      margin: 0px;
+      width: auto;
+      justify-content: center;
+      align-items: center;
+    }
 
+    .topnav {
+        display: flex;
+        flex-direction: row;
+        align-items: ;
+        margin-right: 20%;
+    }
 
+    .topnav a {
+        font-size: 15px;
+        padding: 10px;
+    }
 
+    .one {
+        background-size: cover;
+        border-radius: 20px;
+    }
 
+    .hero-text {
+        text-align: center;
+    }
 
+    .hero-text h1 {
+        font-size: 24px;
+    }
 
+    .hero-text p {
+        font-size: 16px;
+    }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* responsive */
-@media only screen and (max-width: 700px) {
   .responsive {
     width: 49.99999%;
     margin: 6px 0;
   }
+      .five {
+          margin-left: 0;
+      }
+  
+      .article {
+          flex-direction: column;
+          align-items: center;
+          width: 100%;
+          height: auto;
+          margin-left: 0;
+      }
+  
+      .article img {
+          width: 90%;
+          height: auto;
+          margin: 20px 0;
+      }
+  
+      .outer {
+          width: 90%;
+          margin: 0;
+          padding: 10px;
+          text-align: center;
+      }
+  
+      .outer h1 {
+          font-size: 21px;
+      }
+  
+      .outer p {
+          padding-right: 0;
+          font-size: 15px;
+      }
+  
+      .outer button {
+          width: 100px;
+          height: 40px;
+          font-size: 14px;
+      }
 }
 
+
+/* responsive mobile*/
 @media only screen and (max-width: 500px) {
-  .responsive {
-    width: 100%;
-  }
+    body {
+        margin: 0;
+        padding: 0;
+        font-size: 14px;
+    }
+
+    .topnav a, .footer a {
+        font-size: 12px;
+    }
+
+    
+.maincon{
+  overflow-y: scroll;
+  height: 100vh;
+  width: auto;
+  background-color: #F8F7F6;
 }
+
+section{
+   height: auto;
+   display: flex;
+   justify-content: center;
+   scroll-snap-align: start;
+}
+.container{
+  float:right;
+  margin-left:70px;
+}
+
+.topnav a {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+    margin-left:80px;
+  }
+
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    float:right;
+    top: 0;
+    margin-left:70px;
+  }
+  .topnav.responsive a {
+    float: none;
+    margin-left:10px;
+    display: block;
+    text-align: right;
+  }
+  
+  .responsive{
+      flex-direction: column;
+      width:100%;
+    }
+    
+    .three img{
+      margin-left:20px;
+    }
+
+
+.four{
+  height:auto;
+  margin-bottom:30px;
+}
+    .ctg{
+      margin-left:50px;
+
+    }
+    .hero-text h1 {
+        font-size: 24px;
+    }
+
+    .gallery {
+        width: 100%;
+        padding: 5px;
+    }
+
+    .gallery img {
+        width: 100%;
+        height: auto;
+    }
+
+    .list-produk img {
+        width: 100%;
+        height: auto;
+    }
+    .five{
+      height:auto;
+    }
+        .article {
+            flex-direction: column;
+            align-items: center;
+            margin-left: 20px;
+            width: 90%;
+            height: auto;
+        }
+    
+        .article img {
+            width: 90%;
+            height: auto;
+            margin: 20px 0;
+        }
+    
+        .outer {
+            width: 90%;
+            margin: 0;
+            padding: 10px;
+            text-align: center;
+        }
+    
+        .outer h1 {
+            font-size: 18px;
+        }
+    
+        .outer p {
+            padding-right: 0;
+            font-size: 14px;
+        }
+    
+        .outer button {
+            width: 100px;
+            height: 40px;
+            font-size: 14px;
+        }    
+
+        .six{
+          height:auto;
+          margin-top:20px;
+        }
+        
+        .six img{
+          margin-left:20px;
+        }
+
+        .seven{
+          width:100%;}
+
+        .pg1{
+          display:flex;
+          flex-direction:column;
+          text-align:left;
+          margin-left:10px;
+          height:55%;
+        }
+        .satu{
+          margin-left:10px;
+        }
+        .satu h1{
+          font-size:60px;
+        }
+        .dua{
+          text-align:left;
+          margin-left:10px;
+        }
+        .dua h1{
+          text-align:left;
+          margin-right:320px;
+        }
+        .tiga{
+          margin-left:10px;
+        }
+        .empat{
+          margin-left:10px;
+        }
+        .lima {
+          font-size:15px;
+        }
+        .containerArt{
+          display:flex;
+          flex-direction:column;
+          margin-top:30px;
+        }
+        .containerArt img{
+          max-width:100%;
+          margin-top:20px;
+        }
+       
+}
+
+
+
